examples/test/testpolicy450.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy450
  namespace: namespace470
spec:
  podSelector:
    matchLabels:
      key23: value39
      key14: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value17
          key11: value46
      podSelector:
        matchLabels:
          key11: value9
